--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.6
   shared_preferences: ^2.1.1
   mobile_scanner: ^1.0.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
