--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,13 +38,18 @@ dependencies:
   google_fonts: ^4.0.4
   sizer: ^2.0.15
   http: ^0.13.6
-  shared_preferences: ^2.1.1
   mobile_scanner: ^2.1.0
   provider: ^6.0.5
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/veMdora.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
