--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.6
   mobile_scanner: ^2.1.0
   provider: ^6.0.5
+  flutter_native_splash: ^2.3.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
@@ -50,6 +51,14 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/veMdora.png"
+
+flutter_native_splash: 
+  android: true
+  ios: true
+  web: true
+
+  color: "#BCDBFF"
+  image: "assets/images/vemdora_icon.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
