--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mobile_scanner: ^2.1.0
   provider: ^6.0.5
   flutter_native_splash: ^2.3.1
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
